[package]
authors = ['andrewtam']
edition = '2018'
name = 'accumulator'
version = '1.0.0'

[dependencies]
uint = { version="0.8", default-features=false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[features]
default = ['std']
no_std = []
std = [
    'codec/std',
    'rstd/std',
    'runtime-io/std',
    'uint/std',
    'serde',
]
